--- a/res/template.html
+++ b/res/template.html
@@ -6,10 +6,11 @@
     $scripts$
     <style>
       html{line-height:1.5;font-family:sans-serif;color:#333}
-      body{margin:0 auto;padding-bottom:5em;max-width:50em}
-      h1,h2,h3,h4,h5,h6{margin:1.2em 0 .4em;line-height:1.2}
-      h1 {border-bottom:3px solid #e5e5e5}
-      h2 {border-bottom:2px solid #e5e5e5}
+      body{margin:0 auto;padding:1em;max-width:50em}
+      dt{font-weight: bold;}
+      h1,h2,h3,h4,h5,h6{margin:0.4em 0;line-height:1.2}
+      h1,h2{border-bottom:2px solid gray}
+      h3,h4,h5,h6{border-bottom:2px solid gray}
       p{margin:0 0 1em}
       a{color:#4183bb}
       img,figure{display:block}
